library/src/libqgraphicsview.h

typedef struct QGraphicsItem QGraphicsItem;
typedef struct QGraphicsView QGraphicsView;
typedef struct QInputMethodEvent QInputMethodEvent;
typedef struct QMouseEvent QMouseEvent;
typedef struct QPaintEvent QPaintEvent;
typedef struct QPainter QPainter;
typedef struct QPainterPath QPainterPath;
typedef struct QRect QRect;
typedef struct QRectF QRectF;
typedef struct QResizeEvent QResizeEvent;
typedef struct QShowEvent QShowEvent;
typedef struct QTransform QTransform;
typedef struct QWheelEvent QWheelEvent;
void QGraphicsView_MouseDoubleClickEvent(QGraphicsView* self, QMouseEvent* event);
void QGraphicsView_MousePressEvent(QGraphicsView* self, QMouseEvent* event);
void QGraphicsView_MouseMoveEvent(QGraphicsView* self, QMouseEvent* event);
void QGraphicsView_MouseReleaseEvent(QGraphicsView* self, QMouseEvent* event);
void QGraphicsView_WheelEvent(QGraphicsView* self, QWheelEvent* event);
void QGraphicsView_PaintEvent(QGraphicsView* self, QPaintEvent* event);
void QGraphicsView_ResizeEvent(QGraphicsView* self, QResizeEvent* event);
void QGraphicsView_ScrollContentsBy(QGraphicsView* self, int dx, int dy);
void QGraphicsView_ShowEvent(QGraphicsView* self, QShowEvent* event);
void QGraphicsView_InputMethodEvent(QGraphicsView* self, QInputMethodEvent* event);
void QGraphicsView_DrawBackground(QGraphicsView* self, QPainter* painter, QRectF* rect);
void QGraphicsView_DrawForeground(QGraphicsView* self, QPainter* painter, QRectF* rect);
libqt_string QGraphicsView_Tr2(const char* s, const char* c);
libqt_string QGraphicsView_Tr3(const char* s, const char* c, int n);
void QGraphicsView_SetRenderHint2(QGraphicsView* self, int hint, bool enabled);
void QGraphicsView_SetOptimizationFlag2(QGraphicsView* self, int flag, bool enabled);
void QGraphicsView_SetTransform2(QGraphicsView* self, QTransform* matrix, bool combine);
void QGraphicsView_EnsureVisible22(QGraphicsView* self, QRectF* rect, int xmargin);
void QGraphicsView_EnsureVisible3(QGraphicsView* self, QRectF* rect, int xmargin, int ymargin);
void QGraphicsView_EnsureVisible5(QGraphicsView* self, double x, double y, double w, double h, int xmargin);
void QGraphicsView_EnsureVisible6(QGraphicsView* self, double x, double y, double w, double h, int xmargin, int ymargin);
void QGraphicsView_EnsureVisible23(QGraphicsView* self, QGraphicsItem* item, int xmargin);
void QGraphicsView_EnsureVisible32(QGraphicsView* self, QGraphicsItem* item, int xmargin, int ymargin);
void QGraphicsView_FitInView22(QGraphicsView* self, QRectF* rect, int aspectRadioMode);
void QGraphicsView_FitInView5(QGraphicsView* self, double x, double y, double w, double h, int aspectRadioMode);
void QGraphicsView_FitInView23(QGraphicsView* self, QGraphicsItem* item, int aspectRadioMode);
void QGraphicsView_Render2(QGraphicsView* self, QPainter* painter, QRectF* target);
void QGraphicsView_Render3(QGraphicsView* self, QPainter* painter, QRectF* target, QRect* source);
void QGraphicsView_Render4(QGraphicsView* self, QPainter* painter, QRectF* target, QRect* source, int aspectRatioMode);
libqt_list /* of QGraphicsItem* */ QGraphicsView_Items22(const QGraphicsView* self, QRect* rect, int mode);
libqt_list /* of QGraphicsItem* */ QGraphicsView_Items5(const QGraphicsView* self, int x, int y, int w, int h, int mode);
libqt_list /* of QGraphicsItem* */ QGraphicsView_Items24(const QGraphicsView* self, QPainterPath* path, int mode);
void QGraphicsView_InvalidateScene1(QGraphicsView* self, QRectF* rect);
void QGraphicsView_InvalidateScene2(QGraphicsView* self, QRectF* rect, int layers);